Added mor torough twofishes docs